--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,13 +32,20 @@
             tools:ignore="ButtonStyle" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/show_list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/numList"
+        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="20dp"
-        android:orientation="vertical">
+        />
 
-    </LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:id="@+id/show_list"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_margin="20dp"-->
+        <!--android:orientation="vertical">-->
+
+    <!--</LinearLayout>-->
 </LinearLayout>
