--- a/app/src/main/res/layout/number_layout.xml
+++ b/app/src/main/res/layout/number_layout.xml
@@ -20,21 +20,25 @@
             android:text="@string/box_view_title"
             android:textSize="25sp"
             />
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/data_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                />
+                android:text="abbb" />
+
             <TextView
                 android:id="@+id/time_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"/>
-        </LinearLayout>
+                android:layout_alignParentEnd="true"
+                android:layout_margin="10dp"
+                android:text="alsdf" />
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
