--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,14 @@
                     android:id="@+id/ivtest"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_gravity="end"/>
+                    android:layout_gravity="end"
+                    android:contentDescription="@string/connecting" />
             </FrameLayout>
+            <TextView
+                android:id="@+id/connecting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""/>
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
